--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,142 +4,370 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.project.dmitry.dicechancer.MainActivity">
+    tools:context="com.project.dmitry.dicechancer.MainActivity"
+    >
 
     <LinearLayout
-        android:id="@+id/form_layout"
-        android:layout_width="370dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        >
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/base_number_layout"
-            android:layout_width="295dp"
-            android:layout_height="40dp"
-            android:layout_marginBottom="5px"
-            android:layout_marginTop="20px"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/base_number_label"
-                android:layout_width="165dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="left"
-                android:text="Base number" />
+            android:id="@+id/form_layout"
+            android:layout_width="370dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/base_number_value_layout"
+                android:id="@+id/base_number_layout"
+                android:layout_width="295dp"
+                android:layout_height="40dp"
+                android:layout_marginBottom="5px"
+                android:layout_marginTop="20px"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/base_number_label"
+                    android:layout_width="165dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="left"
+                    android:text="@string/base_number_text_label"
+                    android:textSize="8pt" />
+
+                <LinearLayout
+                    android:id="@+id/base_number_value_layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:visibility="visible">
+
+                    <Button
+                        android:id="@+id/button_decrement_base_number_label"
+                        android:layout_width="30dp"
+                        android:layout_height="match_parent"
+                        android:padding="0dp"
+                        android:text="—"
+                        android:textColor="@android:color/black"
+                        android:textStyle="bold" />
+
+                    <EditText
+                        android:id="@+id/base_number_value"
+                        android:layout_width="70dp"
+                        android:layout_height="match_parent"
+                        android:background="@android:color/white"
+                        android:gravity="center"
+                        android:inputType="number"
+                        android:textColor="@android:color/black" />
+
+                    <Button
+                        android:id="@+id/button_increment_base_number_label"
+                        android:layout_width="30dp"
+                        android:layout_height="match_parent"
+                        android:padding="0dp"
+                        android:text="+"
+                        android:textColor="@android:color/black"
+                        android:textSize="25sp" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/target_number_layout"
+                android:layout_width="295dp"
+                android:layout_height="40dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/target_number_label"
+                    android:layout_width="165dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="left"
+                    android:text="@string/target_number_label_text"
+                    android:textSize="8pt" />
+
+                <LinearLayout
+                    android:id="@+id/target_number_value_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:orientation="horizontal"
+                    android:visibility="visible">
+
+                    <Button
+                        android:id="@+id/button_decrement_target_number_label"
+                        android:layout_width="30dp"
+                        android:layout_height="match_parent"
+                        android:padding="0dp"
+                        android:text="—"
+                        android:textColor="@android:color/black"
+                        android:textStyle="bold" />
+
+                    <EditText
+                        android:id="@+id/target_number_value"
+                        android:layout_width="70dp"
+                        android:layout_height="match_parent"
+                        android:background="@android:color/white"
+                        android:gravity="center"
+                        android:inputType="number"
+                        android:/>
+
+                    <Button
+                        android:id="@+id/button_increment_target_number_label"
+                        android:layout_width="30dp"
+                        android:layout_height="match_parent"
+                        android:padding="0dp"
+                        android:text="+"
+                        android:textColor="@android:color/black"
+                        android:textSize="25sp" />
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:="right"
-                android:orientation="horizontal"
-                android:visibility="visible">
+                android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/button_decrement_base_number_label"
-                    android:layout_width="30dp"
-                    android:layout_height="match_parent"
-                    android:padding="0dp"
-                    android:text="—"
-                    android:textColor="@android:color/black"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/base_number_value"
-                    android:layout_width="70dp"
-                    android:layout_height="match_parent"
-                    android:background="@android:color/white"
+                    android:layout_width="115dp"
+                    android:layout_height="40dp"
                     android:gravity="center"
-                    android:inputType="number"
-                    android:textColor="@android:color/black" />
-
-                <Button
-                    android:id="@+id/button_increment_base_number_label"
-                    android:layout_width="30dp"
-                    android:layout_height="match_parent"
-                    android:padding="0dp"
-                    android:text="+"
-                    android:textColor="@android:color/black"
-                    android:textSize="25sp" />
+                    android:text="@string/calculate_text"
+                    android:textAllCaps="false" />
 
             </LinearLayout>
 
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/target_number_layout"
-            android:layout_width="295dp"
-            android:layout_height="40dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/target_number_label"
-                android:layout_width="165dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="left"
-                android:text="Target number" />
-
-            <LinearLayout
-                android:id="@+id/target_number_value_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:="right"
-                android:orientation="horizontal"
-                android:visibility="visible">
-
-                <Button
-                    android:id="@+id/button_decrement_target_number_label"
-                    android:layout_width="30dp"
-                    android:layout_height="match_parent"
-                    android:padding="0dp"
-                    android:text="—"
-                    android:textColor="@android:color/black"
-                    android:textStyle="bold" />
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+>
+            <TableRow>
 
                 <TextView
-                    android:id="@+id/target_number_value"
-                    android:layout_width="70dp"
-                    android:layout_height="match_parent"
-                    android:background="@android:color/white"
+                    android:id="@+id/result_table_0_0"
+                    android:text="@string/result_table_0_0"
+                    android:padding="10dp"
+                    android:gravity="right"
+                    android:layout_weight="2"/>
+
+                <TextView
+                    android:id="@+id/result_table_0_1"
+                    android:text="@string/result_table_0_1"
                     android:gravity="center"
-                    android:inputType="number" />
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
 
-                <Button
-                    android:id="@+id/button_increment_target_number_label"
-                    android:layout_width="30dp"
-                    android:layout_height="match_parent"
-                    android:padding="0dp"
-                    android:text="+"
-                    android:textColor="@android:color/black"
-                    android:textSize="25sp" />
+                <TextView
+                    android:id="@+id/result_table_0_2"
+                    android:text="@string/result_table_0_2"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
 
-            </LinearLayout>
+                <TextView
+                    android:id="@+id/result_table_0_3"
+                    android:text="@string/result_table_0_3"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/result_table_0_4"
+                    android:text="@string/result_table_0_4"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/result_table_0_5"
+                    android:text="@string/result_table_0_5"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+
+            </TableRow>
+
+            <TableRow>
+
+                <TextView
+                    android:id="@+id/result_table_1_0"
+                    android:text="@string/result_table_1_0"
+                    android:padding="10dp"
+                    android:gravity="right"
+                    android:layout_weight="2"/>
+
+                <TextView
+                    android:id="@+id/result_table_1_1"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/result_table_1_2"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/result_table_1_3"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/result_table_1_4"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/result_table_1_5"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+
+            </TableRow>
+
+            <TableRow>
+
+                <TextView
+                    android:id="@+id/result_table_2_0"
+                    android:text="@string/result_table_2_0"
+                    android:padding="10dp"
+                    android:gravity="right"
+                    android:layout_weight="2"/>
+
+                <TextView
+                    android:id="@+id/result_table_2_1"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/result_table_2_2"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/result_table_2_3"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/result_table_2_4"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/result_table_2_5"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+
+            </TableRow>
+
+            <TableRow>
+
+                <TextView
+                    android:id="@+id/result_table_3_0"
+                    android:text="@string/result_table_3_0"
+                    android:padding="10dp"
+                    android:gravity="right"
+                    android:layout_weight="2"/>
+
+                <TextView
+                    android:id="@+id/result_table_3_1"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/result_table_3_2"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/result_table_3_3"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/result_table_3_4"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/result_table_3_5"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+
+            </TableRow>
+
+            <TableRow>
+
+                <TextView
+                    android:id="@+id/result_table_4_0"
+                    android:text="@string/result_table_4_0"
+                    android:padding="10dp"
+                    android:gravity="right"
+                    android:layout_weight="2"/>
+
+                <TextView
+                    android:id="@+id/result_table_4_1"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/result_table_4_2"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/result_table_4_3"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/result_table_4_4"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/result_table_4_5"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+
+            </TableRow>
 
 
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:layout_width="115dp"
-                android:layout_height="40dp"
-                android:gravity="center"
-                android:text="@string/calculate_text"
-                android:textAllCaps="false"
-                />
-
-        </LinearLayout>
+        </TableLayout>
 
 
     </LinearLayout>
+
+
+
 
 
 </android.support.constraint.ConstraintLayout>
