--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
                     android:visibility="visible">
 
                     <Button
-                        android:id="@+id/button_decrement_base_number_label"
+                        android:id="@+id/button_decrement_base_number"
                         android:layout_width="30dp"
                         android:layout_height="match_parent"
                         android:padding="0dp"
@@ -59,10 +59,11 @@
                         android:background="@android:color/white"
                         android:gravity="center"
                         android:inputType="number"
+                        android:maxLength="2"
                         android:textColor="@android:color/black" />
 
                     <Button
-                        android:id="@+id/button_increment_base_number_label"
+                        android:id="@+id/button_increment_base_number"
                         android:layout_width="30dp"
                         android:layout_height="match_parent"
                         android:padding="0dp"
@@ -98,7 +99,7 @@
                     android:visibility="visible">
 
                     <Button
-                        android:id="@+id/button_decrement_target_number_label"
+                        android:id="@+id/button_decrement_target_number"
                         android:layout_width="30dp"
                         android:layout_height="match_parent"
                         android:padding="0dp"
@@ -113,10 +114,11 @@
                         android:background="@android:color/white"
                         android:gravity="center"
                         android:inputType="number"
-                        android:/>
+                        android:maxLength="2"
+                        />
 
                     <Button
-                        android:id="@+id/button_increment_target_number_label"
+                        android:id="@+id/button_increment_target_number"
                         android:layout_width="30dp"
                         android:layout_height="match_parent"
                         android:padding="0dp"
@@ -135,6 +137,7 @@
                 android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/button_calculate"
                     android:layout_width="115dp"
                     android:layout_height="40dp"
                     android:gravity="center"
@@ -146,6 +149,7 @@
         </LinearLayout>
 
         <TableLayout
+            android:id="@+id/result_table"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
 >
