--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.project.dmitry.dicechancer.MainActivity"
-    >
+    tools:context="com.project.dmitry.dicechancer.MainActivity">
 
     <LinearLayout
-        android:layout_width="368dp"
+        android:layout_width="345dp"
         android:layout_height="495dp"
         android:orientation="vertical">
 
@@ -114,8 +113,7 @@
                         android:background="@android:color/white"
                         android:gravity="center"
                         android:inputType="number"
-                        android:maxLength="2"
-                        />
+                        android:maxLength="2" />
 
                     <Button
                         android:id="@+id/button_increment_target_number"
@@ -151,51 +149,53 @@
         <TableLayout
             android:id="@+id/result_table"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
->
+            android:layout_height="match_parent">
+
             <TableRow>
 
                 <TextView
                     android:id="@+id/result_table_0_0"
-                    android:text="@string/result_table_0_0"
-                    android:padding="10dp"
+                    android:layout_weight="1"
                     android:gravity="right"
-                    android:layout_weight="1"/>
+                    android:paddingBottom="5dp"
+                    android:paddingTop="5dp"
+                    android:paddingRight="5dp"
+                    android:text="@string/result_table_0_0" />
 
                 <TextView
                     android:id="@+id/result_table_0_1"
-                    android:text="@string/result_table_0_1"
+                    android:layout_weight="3"
                     android:gravity="center"
-                    android:padding="10dp"
-                    android:layout_weight="2"/>
+                    android:padding="5dp"
+                    android:text="@string/result_table_0_1" />
 
                 <TextView
                     android:id="@+id/result_table_0_2"
-                    android:text="@string/result_table_0_2"
+                    android:layout_weight="3"
                     android:gravity="center"
-                    android:padding="10dp"
-                    android:layout_weight="2"/>
+                    android:padding="5dp"
+                    android:text="@string/result_table_0_2" />
 
                 <TextView
                     android:id="@+id/result_table_0_3"
-                    android:text="@string/result_table_0_3"
+                    android:layout_weight="3"
                     android:gravity="center"
-                    android:padding="10dp"
-                    android:layout_weight="2"/>
+                    android:padding="5dp"
+                    android:text="@string/result_table_0_3" />
 
                 <TextView
                     android:id="@+id/result_table_0_4"
-                    android:text="@string/result_table_0_4"
+                    android:layout_weight="3"
                     android:gravity="center"
-                    android:padding="10dp"
-                    android:layout_weight="2"/>
+                    android:padding="5dp"
+                    android:text="@string/result_table_0_4" />
 
                 <TextView
                     android:id="@+id/result_table_0_5"
-                    android:text="@string/result_table_0_5"
+                    android:layout_weight="3"
                     android:gravity="center"
-                    android:padding="10dp"
-                    android:layout_weight="2"/>
+                    android:padding="5dp"
+                    android:text="@string/result_table_0_5" />
 
             </TableRow>
 
@@ -203,37 +203,37 @@
 
                 <TextView
                     android:id="@+id/result_table_1_0"
-                    android:text="@string/result_table_1_0"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:paddingRight="10dp"
+                    android:layout_weight="1"
                     android:gravity="right"
-                    android:layout_weight="1"/>
+                    android:paddingBottom="5dp"
+                    android:paddingRight="5dp"
+                    android:paddingTop="5dp"
+                    android:text="@string/result_table_1_0" />
 
                 <TextView
                     android:id="@+id/result_table_1_1"
-                    android:gravity="center"
-                    android:layout_weight="2"/>
+                    android:layout_weight="3"
+                    android:gravity="center" />
 
                 <TextView
                     android:id="@+id/result_table_1_2"
-                    android:gravity="center"
-                    android:layout_weight="2"/>
+                    android:layout_weight="3"
+                    android:gravity="center" />
 
                 <TextView
                     android:id="@+id/result_table_1_3"
-                    android:gravity="center"
-                    android:layout_weight="2"/>
+                    android:layout_weight="3"
+                    android:gravity="center" />
 
                 <TextView
                     android:id="@+id/result_table_1_4"
-                    android:gravity="center"
-                    android:layout_weight="2"/>
+                    android:layout_weight="3"
+                    android:gravity="center" />
 
                 <TextView
                     android:id="@+id/result_table_1_5"
-                    android:gravity="center"
-                    android:layout_weight="2"/>
+                    android:layout_weight="3"
+                    android:gravity="center" />
 
             </TableRow>
 
@@ -241,37 +241,37 @@
 
                 <TextView
                     android:id="@+id/result_table_2_0"
-                    android:text="@string/result_table_2_0"
+                    android:layout_weight="1"
                     android:gravity="right"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:paddingRight="10dp"
-                    android:layout_weight="1"/>
+                    android:paddingBottom="8dp"
+                    android:paddingRight="8dp"
+                    android:paddingTop="8dp"
+                    android:text="@string/result_table_2_0" />
 
                 <TextView
                     android:id="@+id/result_table_2_1"
-                    android:gravity="center"
-                    android:layout_weight="2"/>
+                    android:layout_weight="3"
+                    android:gravity="center" />
 
                 <TextView
                     android:id="@+id/result_table_2_2"
-                    android:gravity="center"
-                    android:layout_weight="2"/>
+                    android:layout_weight="3"
+                    android:gravity="center" />
 
                 <TextView
                     android:id="@+id/result_table_2_3"
-                    android:gravity="center"
-                    android:layout_weight="2"/>
+                    android:layout_weight="3"
+                    android:gravity="center" />
 
                 <TextView
                     android:id="@+id/result_table_2_4"
-                    android:gravity="center"
-                    android:layout_weight="2"/>
+                    android:layout_weight="3"
+                    android:gravity="center" />
 
                 <TextView
                     android:id="@+id/result_table_2_5"
-                    android:gravity="center"
-                    android:layout_weight="2"/>
+                    android:layout_weight="3"
+                    android:gravity="center" />
 
             </TableRow>
 
@@ -279,37 +279,37 @@
 
                 <TextView
                     android:id="@+id/result_table_3_0"
-                    android:text="@string/result_table_3_0"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:paddingRight="10dp"
+                    android:layout_weight="1"
                     android:gravity="right"
-                    android:layout_weight="1"/>
+                    android:paddingBottom="8dp"
+                    android:paddingRight="8dp"
+                    android:paddingTop="8dp"
+                    android:text="@string/result_table_3_0" />
 
                 <TextView
                     android:id="@+id/result_table_3_1"
-                    android:gravity="center"
-                    android:layout_weight="2"/>
+                    android:layout_weight="3"
+                    android:gravity="center" />
 
                 <TextView
                     android:id="@+id/result_table_3_2"
-                    android:gravity="center"
-                    android:layout_weight="2"/>
+                    android:layout_weight="3"
+                    android:gravity="center" />
 
                 <TextView
                     android:id="@+id/result_table_3_3"
-                    android:gravity="center"
-                    android:layout_weight="2"/>
+                    android:layout_weight="3"
+                    android:gravity="center" />
 
                 <TextView
                     android:id="@+id/result_table_3_4"
-                    android:gravity="center"
-                    android:layout_weight="2"/>
+                    android:layout_weight="3"
+                    android:gravity="center" />
 
                 <TextView
                     android:id="@+id/result_table_3_5"
-                    android:gravity="center"
-                    android:layout_weight="2"/>
+                    android:layout_weight="3"
+                    android:gravity="center" />
 
             </TableRow>
 
@@ -317,54 +317,43 @@
 
                 <TextView
                     android:id="@+id/result_table_4_0"
-                    android:text="@string/result_table_4_0"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:paddingRight="10dp"
+                    android:layout_weight="1"
                     android:gravity="right"
-                    android:layout_weight="1"/>
+                    android:paddingBottom="8dp"
+                    android:paddingRight="8dp"
+                    android:paddingTop="8dp"
+                    android:text="@string/result_table_4_0" />
 
                 <TextView
                     android:id="@+id/result_table_4_1"
-                    android:gravity="center"
+                    android:layout_weight="3"
 
-                    android:layout_weight="2"/>
+                    android:gravity="center" />
 
                 <TextView
                     android:id="@+id/result_table_4_2"
-                    android:gravity="center"
-
-                    android:layout_weight="2"/>
+                    android:layout_weight="3"
+                    android:gravity="center" />
 
                 <TextView
                     android:id="@+id/result_table_4_3"
-                    android:gravity="center"
-
-                    android:layout_weight="2"/>
+                    android:layout_weight="3"
+                    android:gravity="center" />
 
                 <TextView
                     android:id="@+id/result_table_4_4"
-                    android:gravity="center"
-
-                    android:layout_weight="2"/>
+                    android:layout_weight="3"
+                    android:gravity="center" />
 
                 <TextView
                     android:id="@+id/result_table_4_5"
-                    android:gravity="center"
-
-                    android:layout_weight="2"/>
+                    android:layout_weight="3"
+                    android:gravity="center" />
 
             </TableRow>
 
-
-
         </TableLayout>
 
-
     </LinearLayout>
-
-
-
-
 
 </android.support.constraint.ConstraintLayout>
